# ProductManager

./: README.md
ProductManager/: CMakeLists.txt  exec.sh
ProductManager/src/: main.cpp
ProductManager/src/csv/: CSVManager.cpp  CSVManager.h  Logger.cpp  Logger.h
ProductManager/src/exceptions/: CSVException.cpp  CSVException.h  ProductException.cpp  ProductException.h
ProductManager/src/manager/: ProductManager.cpp  ProductManager.h
ProductManager/src/measurer/: Measurer.cpp  Measurer.h
ProductManager/src/product/: Product.cpp  Product.h
ProductManager/src/structures/: DataStructure.h
ProductManager/src/structures/avl/: AVLNode.cpp  AVLNode.h  AVLTree.cpp  AVLTree.h
ProductManager/src/structures/bplustree/: BPlusTree.cpp  BPlusTree.h
ProductManager/src/structures/btree/: BNode.cpp  BNode.h  BTree.cpp  BTree.h
ProductManager/src/structures/list/: LinkedList.cpp  LinkedList.h  LinkedListNode.cpp  LinkedListNode.h  SortedLinkedList.cpp  SortedLinkedList.h  UnsortedLinkedList.cpp  UnsortedLinkedList.h
ProductManager/src/visualizer/: Visualizer.cpp  Visualizer.h
doc/: muestra.csv  products.csv
doc/dot/: arbol_b_4.dot  arbol_bplus_5.dot  avl_3.dot  lista_desordenada_1.dot  lista_ordenada_2.dot
test/: menu.txt  p.csv  products.csv
